--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
@@ -1,97 +1,98 @@
-<mvc:View controllerName="de.fis.bewerbungverwaltung.controller.BewerbungDetail"
-	displayBlock="true" height="100%" xmlns:mvc="sap.ui.core.mvc"
-	xmlns:core="sap.ui.core" xmlns:semantic="sap.m.semantic" xmlns="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:m="sap.m">
-
+<mvc:View controllerName="de.fis.bewerbungverwaltung.controller.BewerbungDetail" displayBlock="true" height="100%"
+	xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns:semantic="sap.m.semantic" xmlns="sap.uxap" xmlns:layout="sap.ui.layout"
+	xmlns:html="http://www.w3.org/1999/xhtml" xmlns:m="sap.m">
 	<semantic:DetailPage title="BewerbungDetail">
-
 		<semantic:pagingAction>
-			<m:PagingButton count="5" positionChange="onPositionChange" />
+			<m:PagingButton count="5" positionChange="onPositionChange"/>
 		</semantic:pagingAction>
-
-		<ObjectPageLayout id="ObjectPageLayout"
-			enableLazyLoading="false" showTitleInHeaderContent="true"
-			showEditHeaderButton="true" editHeaderButtonPress="handleEditBtnPress">
+		<ObjectPageLayout id="ObjectPageLayout" enableLazyLoading="false" showTitleInHeaderContent="true" editHeaderButtonPress="handleEditBtnPress">
 			<headerTitle>
-				<ObjectPageHeader
-					objectImageURI="./images/Pikachu.png"
-					objectTitle="Ali Ak" objectImageShape="Circle"
-					objectImageAlt="Ali Ak" objectSubtitle="97493 Bergrheinfeld"
-
-					isObjectIconAlwaysVisible="false" isObjectTitleAlwaysVisible="false"
-					isObjectSubtitleAlwaysVisible="false">
-				</ObjectPageHeader>
+				<ObjectPageHeader objectImageURI="./images/Pikachu.png"
+					objectTitle="{testModel>BewerberDetails/Vorname} {testModel>BewerberDetails/Nachname}" objectImageShape="Circle"
+					objectImageAlt="{testModel>BewerberDetails/Vorname} {testModel>BewerberDetails/Nachname}"
+					objectSubtitle="{testModel>BewerberDetails/Postleitzahl} {testModel>BewerberDetails/Ort}" isObjectIconAlwaysVisible="false"
+					isObjectTitleAlwaysVisible="false" isObjectSubtitleAlwaysVisible="false"></ObjectPageHeader>
 			</headerTitle>
-
 			<headerContent>
 				<layout:VerticalLayout>
 					<m:HBox alignItems="Center">
-						<core:Icon src="sap-icon://phone" size="1.3rem" class="sapUiTinyMarginEnd" />
-						<m:Label text="09721 122345" />
+						<core:Icon src="sap-icon://phone" size="1.3rem" class="sapUiTinyMarginEnd"/>
+						<m:Label text="{testModel>BewerberDetails/Telefonnummer}"/>
 					</m:HBox>
 					<m:HBox alignItems="Center">
-						<core:Icon src="sap-icon://iphone" size="1.3rem" class="sapUiTinyMarginEnd" />
-						<m:Label text="+33 6 4512 5158" />
+						<core:Icon src="sap-icon://iphone" size="1.3rem" class="sapUiTinyMarginEnd"/>
+						<m:Label text="{testModel>BewerberDetails/Handynummer}"/>
 					</m:HBox>
 					<m:HBox alignItems="Center">
-						<core:Icon src="sap-icon://email" size="1.3rem" class="sapUiTinyMarginEnd" />
-						<m:Label text="ali.ak@gmail.com" />
+						<core:Icon src="sap-icon://email" size="1.3rem" class="sapUiTinyMarginEnd"/>
+						<m:Label text="{testModel>BewerberDetails/Email}"/>
 					</m:HBox>
 				</layout:VerticalLayout>
-
+				
 				<layout:VerticalLayout>
-					<html:ul><html:li>Item 1</html:li><html:li>Item 2</html:li><html:li>Item 3</html:li></html:ul>
+					<m:Table items="{path: 'testModel>BewerbungStelleDetails/results'}">
+						<m:ColumnListItem width="auto" type="Inactive">
+							<m:cells>
+								<m:Label text="{testModel>StelleDetails/Bezeichnung}" id="__text7"
+									width="auto" />
+							</m:cells>
+						</m:ColumnListItem>
+						<m:columns>
+							<m:Column id="__column0"></m:Column>
+						</m:columns>
+					</m:Table>
 				</layout:VerticalLayout>
+				
+				<!--
+				<layout:VerticalLayout content="{path: 'testModel>/Bewerbungs/0/BewerbungStelleDetails/results'}">
+					
+					<layout:content>
+						<html:ul>
+						<html:li text="Item 1"></html:li><html:li>Item 2</html:li><html:li>Item 3</html:li>
+						</html:ul>
+					</layout:content>
+					
+				</layout:VerticalLayout>
+-->
 			</headerContent>
-			
-			
-			
 			<sections>
-			<ObjectPageSection title="Details">
-				<subSections>
-					<ObjectPageSubSection title=" ">
-						<m:Panel title="asdf">
-							<m:Label text="Some text"/>
-						</m:Panel>
-					</ObjectPageSubSection>
-				</subSections>
-			</ObjectPageSection>
- 
-			<ObjectPageSection title="Kommentare">
-				<subSections>
-					<ObjectPageSubSection title="">
-						<m:Panel title="asdf">
-							<m:Label text="Some text"/>
-						</m:Panel>
-					</ObjectPageSubSection>
-				</subSections>
-			</ObjectPageSection>
- 
-			<ObjectPageSection title="Unterlagen">
-				<subSections>
-					<ObjectPageSubSection title="">
-						<m:Panel title="asdf">
-							<m:Label text="Some text"/>
-						</m:Panel>
-					</ObjectPageSubSection>
-				</subSections>
-			</ObjectPageSection>
-			
-			<ObjectPageSection title="Umlauf">
-				<subSections>
- 
-					<ObjectPageSubSection title=" ">
-						<m:Panel title="asdf">
-							<m:Label text="Some text"/>
-						</m:Panel>
-					</ObjectPageSubSection>
-				</subSections>
-			</ObjectPageSection>
-			
-		</sections>
-
-			
+				<ObjectPageSection title="Details">
+					<subSections>
+						<ObjectPageSubSection title=" ">
+							<m:Panel title="asdf">
+								<m:Label text="Some text"/>
+							</m:Panel>
+						</ObjectPageSubSection>
+					</subSections>
+				</ObjectPageSection>
+				<ObjectPageSection title="Kommentare">
+					<subSections>
+						<ObjectPageSubSection title="">
+							<m:Panel title="asdf">
+								<m:Label text="Some text"/>
+							</m:Panel>
+						</ObjectPageSubSection>
+					</subSections>
+				</ObjectPageSection>
+				<ObjectPageSection title="Unterlagen">
+					<subSections>
+						<ObjectPageSubSection title="">
+							<m:Panel title="asdf">
+								<m:Label text="Some text"/>
+							</m:Panel>
+						</ObjectPageSubSection>
+					</subSections>
+				</ObjectPageSection>
+				<ObjectPageSection title="Umlauf">
+					<subSections>
+						<ObjectPageSubSection title=" ">
+							<m:Panel title="asdf">
+								<m:Label text="Some text"/>
+							</m:Panel>
+						</ObjectPageSubSection>
+					</subSections>
+				</ObjectPageSection>
+			</sections>
 		</ObjectPageLayout>
-		
 	</semantic:DetailPage>
-
 </mvc:View>
