--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
@@ -1,5 +1,5 @@
 <mvc:View controllerName="de.fis.bewerbungverwaltung.controller.BewerbungDetail" displayBlock="true" height="100%"
-	xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns:semantic="sap.m.semantic" xmlns="sap.uxap" xmlns:layout="sap.ui.layout"
+	xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns:semantic="sap.m.semantic" xmlns:custom="de.fis.bewerbungverwaltung.control" xmlns="sap.uxap" xmlns:layout="sap.ui.layout"
 	xmlns:html="http://www.w3.org/1999/xhtml" xmlns:m="sap.m">
 	<semantic:DetailPage title="BewerbungDetail" showNavButton="{device>/system/phone}" navButtonPress="onNavButtonPressed">
 		<semantic:pagingAction>
@@ -28,7 +28,16 @@
 						<m:Label text="{testModel>BewerberDetails/Email}"/>
 					</m:HBox>
 				</layout:VerticalLayout>
-				
+
+				<layout:VerticalLayout>
+					<custom:SimpleList items="{path: 'testModel>BewerbungStelleDetails/results'}">
+						<custom:items>
+							<m:Label text="{testModel>StelleDetails/Bezeichung}"/>
+						</custom:items>
+					</custom:SimpleList>
+				</layout:VerticalLayout>
+
+<!--				
 				<layout:VerticalLayout>
 					<m:Table items="{path: 'testModel>BewerbungStelleDetails/results'}">
 						<m:ColumnListItem width="auto" type="Inactive">
@@ -44,7 +53,7 @@
 						</m:columns>
 					</m:Table>
 				</layout:VerticalLayout>
-				
+-->				
 				<!--
 				<layout:VerticalLayout content="{path: 'testModel>/Bewerbungs/0/BewerbungStelleDetails/results'}">
 					
