--- a/bewerbungverwaltung-cloud-web/src/main/webapp/css/style.css
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/css/style.css
@@ -1,3 +1,11 @@
+.sapUxAPObjectPageHeaderContent .sapUxAPObjectPageHeaderContentItem {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 0rem;
+    margin-bottom: 1rem;
+    line-height: 1.5rem;
+}
+
 .listBewerbungen
 .sapMListUl>li:hover {
 	background: #f0f0f0;
