--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
@@ -1,6 +1,6 @@
 <mvc:View controllerName="de.fis.bewerbungverwaltung.controller.BewerbungDetail" displayBlock="true" height="100%"
-	xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns:semantic="sap.m.semantic" xmlns:custom="de.fis.bewerbungverwaltung.control" xmlns="sap.uxap" xmlns:layout="sap.ui.layout"
-	xmlns:html="http://www.w3.org/1999/xhtml" xmlns:m="sap.m">
+	xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns:semantic="sap.m.semantic" xmlns:custom="de.fis.bewerbungverwaltung.control"
+	xmlns="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:m="sap.m">
 	<semantic:DetailPage title="BewerbungDetail" showNavButton="{device>/system/phone}" navButtonPress="onNavButtonPressed">
 		<semantic:pagingAction>
 			<m:PagingButton count="5" positionChange="onPositionChange"/>
@@ -14,57 +14,38 @@
 					isObjectTitleAlwaysVisible="false" isObjectSubtitleAlwaysVisible="false"></ObjectPageHeader>
 			</headerTitle>
 			<headerContent>
-				<layout:VerticalLayout>
-					<m:HBox alignItems="Center">
-						<core:Icon src="sap-icon://phone" size="1.3rem" class="sapUiTinyMarginEnd"/>
-						<m:Label text="{testModel>BewerberDetails/Telefonnummer}"/>
-					</m:HBox>
-					<m:HBox alignItems="Center">
-						<core:Icon src="sap-icon://iphone" size="1.3rem" class="sapUiTinyMarginEnd"/>
-						<m:Label text="{testModel>BewerberDetails/Handynummer}"/>
-					</m:HBox>
-					<m:HBox alignItems="Center">
-						<core:Icon src="sap-icon://email" size="1.3rem" class="sapUiTinyMarginEnd"/>
-						<m:Label text="{testModel>BewerberDetails/Email}"/>
-					</m:HBox>
-				</layout:VerticalLayout>
-
-				<layout:VerticalLayout>
-					<custom:SimpleList items="{path: 'testModel>BewerbungStelleDetails/results'}">
-						<custom:items>
-							<m:Label text="{testModel>StelleDetails/Bezeichung}"/>
-						</custom:items>
-					</custom:SimpleList>
-				</layout:VerticalLayout>
-
-<!--				
-				<layout:VerticalLayout>
-					<m:Table items="{path: 'testModel>BewerbungStelleDetails/results'}">
-						<m:ColumnListItem width="auto" type="Inactive">
-							<m:cells>
-								<core:Icon src="sap-icon://overlay"/>
-								<m:Text text="{testModel>StelleDetails/Bezeichnung}" id="__text7"
-									width="auto" />
-							</m:cells>
-						</m:ColumnListItem>
-						<m:columns>
-							<m:Column width="auto"></m:Column>
-							<m:Column width="80%"></m:Column>
-						</m:columns>
-					</m:Table>
-				</layout:VerticalLayout>
--->				
-				<!--
-				<layout:VerticalLayout content="{path: 'testModel>/Bewerbungs/0/BewerbungStelleDetails/results'}">
-					
-					<layout:content>
-						<html:ul>
-						<html:li text="Item 1"></html:li><html:li>Item 2</html:li><html:li>Item 3</html:li>
-						</html:ul>
-					</layout:content>
-					
-				</layout:VerticalLayout>
--->
+					<html:table>
+						<html:tr>
+							<html:td><core:Icon src="sap-icon://phone" size="1.3rem" class="sapUiTinyMarginEnd"/></html:td>
+							<html:td><m:Label text="{testModel>BewerberDetails/Telefonnummer}"/></html:td>
+						</html:tr>
+						<html:tr>
+							<html:td><core:Icon src="sap-icon://iphone" size="1.3rem" class="sapUiTinyMarginEnd"/></html:td>
+							<html:td><m:Label text="{testModel>BewerberDetails/Handynummer}"/></html:td>
+						</html:tr>
+						<html:tr>
+							<html:td><core:Icon src="sap-icon://email" size="1.3rem" class="sapUiTinyMarginEnd"/></html:td>
+							<html:td><m:Label text="{testModel>BewerberDetails/Email}"/></html:td>
+						</html:tr>
+					</html:table>
+					<m:VBox width="40%" class="sapUiSmallMarginBegin" visible="{= !${device>/system/phone}}">
+						<m:Label text="Stellen" design="Bold"/>
+						<m:VBox items="{path: 'testModel>/Bewerbungs/0/BewerbungStelleDetails/results'}">
+							<m:items>
+								<m:Text text="• {testModel>StelleDetails/Bezeichnung}"/>
+							</m:items>
+						</m:VBox>
+					</m:VBox>
+					<html:table>
+						<html:tr>
+							<html:td><m:Label text="Eingetragen von: "/></html:td>
+							<html:td><m:Label text="{testModel>EingetragenVon}"/></html:td>
+						</html:tr>
+						<html:tr>
+							<html:td><m:Label text="Eingetragen am: "/></html:td>
+							<html:td><m:Label text="{path: 'testModel>EingetragenAm', formatter: '.formatter.formatDatum'}"/></html:td>
+						</html:tr>
+					</html:table>
 			</headerContent>
 			<sections>
 				<ObjectPageSection title="Details">
