Suchen-Funktionalität und Teil der Filter-Funktionalität

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
@@ -81,7 +81,7 @@
 					<uxap:subSections>
 						<uxap:ObjectPageSubSection title="">
 							<Panel title="asdf">
-								<Label text="Some text"/>
+								<core:Fragment fragmentName="de.fis.bewerbungverwaltung.view.fragment.Kommentare" type="XML"/>
 							</Panel>
 						</uxap:ObjectPageSubSection>
 					</uxap:subSections>
@@ -90,7 +90,7 @@
 					<uxap:subSections>
 						<uxap:ObjectPageSubSection title="">
 							<Panel title="asdf">
-								<Label text="Some text"/>
+								<core:Fragment fragmentName="de.fis.bewerbungverwaltung.view.fragment.Unterlagen" type="XML"/>
 							</Panel>
 						</uxap:ObjectPageSubSection>
 					</uxap:subSections>
