--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungenMaster.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungenMaster.view.xml
@@ -1,39 +1,28 @@
-<mvc:View controllerName="de.fis.bewerbungverwaltung.controller.BewerbungenMaster"
-	displayBlock="true" height="100%" xmlns:mvc="sap.ui.core.mvc"
-	xmlns:semantic="sap.m.semantic" xmlns:core="sap.ui.core" xmlns="sap.m">
-
-	<semantic:MasterPage title="Bewerbungen"
-		showSubHeader="true">
+<mvc:View controllerName="de.fis.bewerbungverwaltung.controller.BewerbungenMaster" displayBlock="true" height="100%"
+	xmlns:mvc="sap.ui.core.mvc" xmlns:semantic="sap.m.semantic" xmlns:core="sap.ui.core" xmlns="sap.m">
+	<semantic:MasterPage title="Bewerbungen" showSubHeader="true">
 		<semantic:subHeader>
 			<Toolbar>
-				<SearchField width="100%" placeholder="Search for name..." />
+				<SearchField width="100%" placeholder="Suchen" search="onSearch"/>
 			</Toolbar>
 		</semantic:subHeader>
-
-		<List class="listBewerbungen" items="{path: 'testModel>/Bewerbungs'}">
-			<core:Fragment
-				fragmentName="de.fis.bewerbungverwaltung.view.fragment.BewerbungListItem"
-				type="XML" />
-		</List>
-
+		<semantic:content>
+			<PullToRefresh id="pullToRefresh" visible="{device>/support/touch}" refresh="onRefresh"/>
+			<List id="listBewerbungen" class="listBewerbungen" items="{path: 'testModel>/Bewerbungs', sorter: {path: '{masterView>/SortBy}'} }"
+				busyIndicatorDelay="{masterView>/Delay}" noDataText="{masterView>/NoDataText}" updateFinished="onUpdateFinished">
+				<core:Fragment fragmentName="de.fis.bewerbungverwaltung.view.fragment.BewerbungListItem" type="XML"/>
+			</List>
+		</semantic:content>
 		<semantic:sort>
-			<semantic:SortSelect change="onSemanticSelectChange"
-				items="{
-							path: '/ProductCollectionStats/Filters',
-							sorter: { path: 'Name' }
-							}">
-				<core:Item key="{type}" text="{type}" />
+			<semantic:SortSelect change="onSemanticSelectChange" items="{ path: '/ProductCollectionStats/Filters', sorter: { path: 'Name' } }">
+				<core:Item key="{type}" text="{type}"/>
 			</semantic:SortSelect>
 		</semantic:sort>
 		<semantic:filter>
-			<semantic:FilterAction press="onSemanticButtonPress" />
+			<semantic:FilterAction press="onFilterPressed"/>
 		</semantic:filter>
 		<semantic:group>
-			<semantic:GroupAction press="onSemanticButtonPress" />
+			<semantic:GroupAction press="onSemanticButtonPress"/>
 		</semantic:group>
-		<semantic:addAction>
-			<semantic:AddAction press="onSemanticButtonPress" />
-		</semantic:addAction>
 	</semantic:MasterPage>
-
 </mvc:View>
