--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungenMaster.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungenMaster.view.xml
@@ -8,8 +8,8 @@
 		</semantic:subHeader>
 		<semantic:content>
 			<PullToRefresh id="pullToRefresh" visible="{device>/support/touch}" refresh="onRefresh"/>
-			<List id="listBewerbungen" class="listBewerbungen" items="{path: 'testModel>/Bewerbungs', sorter: {path: '{masterView>/SortBy}'} }"
-				busyIndicatorDelay="{masterView>/Delay}" noDataText="{masterView>/NoDataText}" updateFinished="onUpdateFinished">
+			<List id="listBewerbungen" class="listBewerbungen" items="{path: 'testModel>/Bewerbungs', sorter: {path: '{masterView>/sortBy}'} }"
+				busyIndicatorDelay="{masterView>/delay}" noDataText="{masterView>/noDataText}" updateFinished="onUpdateFinished">
 				<core:Fragment fragmentName="de.fis.bewerbungverwaltung.view.fragment.BewerbungListItem" type="XML"/>
 			</List>
 		</semantic:content>
