--- a/bewerbungverwaltung-cloud-web/src/main/webapp/css/style.css
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/css/style.css
@@ -6,6 +6,16 @@
     line-height: 1.5rem;
 }
 
+.themaKommentar {
+	padding: 4px 4px 4px 4px;
+	background: #eff4f9;
+}
+
+.listKommentare
+.sapMListUl>li {
+	background: inherit;
+}
+
 .listBewerbungen
 .sapMListUl>li:hover {
 	background: #f0f0f0;
