Bearbeiten-Buttons bei allen Fragments. Unterlagen-Fragment implementiert. Details-Fragment verbessert

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungDetail.view.xml
@@ -48,7 +48,7 @@
 					<Label text="Stellen" design="Bold"/>
 					<VBox items="{path: 'testModel>BewerbungStelleDetails/results'}">
 						<items>
-							<Text text="• {testModel>StelleDetails/Bezeichnung}" class="sapUiTinyMarginBottom"/>
+							<Text text="• {testModel>StelleDetails/Bezeichnung}" class="sapUiTinyMarginBottom sapUiSmallMarginBegin"/>
 						</items>
 					</VBox>
 				</VBox>
